Add vacancy creation logic and fix schema/insert data